# vex-triage

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt  validate.py
.github/workflows/: example.yml  test.yml
src/: __init__.py  config.py  github_client.py  main.py  triage.py  utils.py  version_matcher.py  vex_client.py
tests/: __init__.py  test_version_matcher.py  test_vex_client.py
tests/fixtures/: sample_vex.json
